--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
     if: "! contains(github.event.head_commit.message, '[ci skip]')"
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: [3.8]
 
     steps:
       - uses: actions/checkout@v2
@@ -35,7 +35,6 @@ jobs:
         env: # Or as an environment variable
           SETTINGS_YAML: ${{ secrets.SETTINGS_YAML }}
           CREDENTIALS_JSON: ${{ secrets.CREDENTIALS_JSON }}
-          PARATRANZ_SECRET: ${{ secrets.PARATRANZ_SECRET }}
         run: |
           python env2file.py
           dir
@@ -45,6 +44,8 @@ jobs:
       - name: Pack mod and upload
         run: |
           python main.py
+        env:
+          PARATRANZ_SECRET: ${{ secrets.PARATRANZ_SECRET }}
       - name: push translation
         run: |
           dir
