--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,9 +51,13 @@ jobs:
           dir
           git config --global user.email "matanki.saito@gmail.com"
           git config --global user.name "matanki.saito"
+          git config --global url."https://${{ secrets.GITHUB_TOKEN }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
           git add -A
-          git commit -m "Save/Update files"
+          git commit -m "Save/Update files [ci skip]"
           git push origin HEAD:develop
+        shell: cmd
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
