--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,11 +1,9 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
-
 on:
-  schedule:
-    - cron:  '30 17 * * tue,fri'
+  repository_dispatch:
+    types: [publish]
   workflow_dispatch:
     inputs:
       name:
