--- a/.github/workflows/extract.yml
+++ b/.github/workflows/extract.yml
@@ -59,10 +59,9 @@ jobs:
           mkdir game
           cd ..
           cd steamcmd
-          steamcmd.exe -dev -textmode -ignoredxsupportcfg +force_install_dir "../tmp/game" +login %STEAM_LOGIN_NAME% %STEAM_LOGIN_PASSWORD% +app_update 236850 validate +quit
+          steamcmd.exe -dev -textmode -ignoredxsupportcfg +force_install_dir "../tmp/game" +login %STEAM_LOGIN_NAME% +app_update 236850 validate +quit
         env:
           STEAM_LOGIN_NAME: ${{ secrets.STEAM_LOGIN_NAME }}
-          STEAM_LOGIN_PASSWORD: ${{ secrets.STEAM_LOGIN_PASSWORD }}
         shell: cmd
         continue-on-error: true
 
